--- a/task3.html
+++ b/task3.html
@@ -11,13 +11,13 @@
 		.img1{margin: 4em ;
 		text-align: center;}
 		.b{display: inline-block;
-		
+			position: absolute;
 		margin: 2em 10%;
 		font-size: 1.5em;
 		line-height: 150%;
 		}
 		.img2{
-		margin: 5em 0 0 10%;
+		margin: 18em 0 0 10%;
 		font-size: 1em;
 		float: left;
 		position:relative;  }
@@ -26,7 +26,7 @@
         top:4em; 
         }
 		.img3{
-		margin: 5em 10% 0 0;
+		margin: 18em 10% 0 0;
 		font-size: 1em;
 		float: right;
 		position:relative; 
@@ -45,8 +45,7 @@
 	<img src="img/3.png" width="40" height="40" alt="" class="img4"/>
 <div class="img1">
 	<img src="img/4.png" width="108.6" height="42" alt=""/> </div>
-<div>
-	<div class="b">
+<div class="b">
 		葡萄藤轻游戏专注于桌游领域，提供在线杀人游戏、捉鬼、炸狼堡等多人聚会游戏，以及线下聚会桌游道具。</div>
 <div class="img2">
 	<img src="img/2.png" width="50" height="50" alt=""  />
@@ -56,7 +55,7 @@
 <img src="img/1.png" width="50" height="50" alt="" />
 <p class="d">BJPTTeng</p>
 </div>
-	</div>
+	
 
 
 
