--- a/task4.html
+++ b/task4.html
@@ -85,11 +85,11 @@
 	  <p class="c">关闭</p> 
   </header> 
 <div class="baikuai1">
-<img src="file:///C|/Users/Administrator/Desktop/images/登陆_03.png" width="45" height="30.6" class="img1" />
+<img src="images/登陆_03.png" width="45" height="30.6" class="img1" />
 <input type="text" name="name" placeholder="请输入手机号"  class="input1"  />
 	</div>
 <div class="baikuai2">
-<img src="file:///C|/Users/Administrator/Desktop/images/登陆_06.png" width="45" height="30.6" class="img2"/>
+<img src="images/登陆_06.png" width="45" height="30.6" class="img2"/>
 <input type="password"  name="pass" placeholder="请输入密码" class="input2"/>  	</div>	
 <div class="e">登录
   </div>
