--- a/task5.html
+++ b/task5.html
@@ -4,11 +4,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style type="text/css"> 
+	  html,body{padding:0; margin:0;}
 	  body{font-family: 黑体;
-	  overflow:scroll;}
+	  }
 	.a{background: #5fc0cd;position: fixed;
 	display: flex;
-	width: 100%;top:0;right: 0;
+	width: 100%;
 	height: 4em;
 	color: #FFFFFF;
 	justify-content: center;
@@ -20,7 +21,6 @@
 		top: 0.5em
 	  }
 	  .img1{position: absolute;
-		  right:0;left:0;
 		  width:100%;
     height:0;
 		 
