--- a/task5.html
+++ b/task5.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style type="text/css"> 
-	  html,body{padding:0; margin:0;}
+	  html,body{padding:0; margin:0;overflow: none;}
 	  body{font-family: 黑体;
 	  }
 	.a{background: #5fc0cd;position: fixed;
