--- a/task61.html
+++ b/task61.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<link rel="stylesheet" href="https://wanxxxx.github.io/2/task61.css" type="text/css">
+<link rel="stylesheet" href="./task61.css" type="text/css">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1.0, user-scalable=no">
 
