--- a/task61.html
+++ b/task61.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<link rel="stylesheet" href="./task61.css" type="text/css">
+<link rel="stylesheet" href="https://wanxxxx.github.io/2/task61.css" type="text/css">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1.0, user-scalable=no">
 
@@ -14,26 +14,143 @@
     src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js">
 </script>
 </head>
-<body>
+<body class="body">
 <header class="header">
 <div >
   <button type="button" class="button1">找雇主</button>
   <button type="button" class="button2">找护工</button>
 </div>
-	</header> 
+</header> 
 <div class="xiala">
-<div class="dropdown" style="padding-top:4em;width: 100%">
-  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-    所在地
-    <span class="caret1"></span>
-  </button>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1" style="margin-top:39px; width:30%;">
-    <li><a href="#">1</a></li>
-    <li><a href="#">2</a></li>
-    <li><a href="#">3</a></li>
- 
-  </ul>
+        <select>
+            <option value="">所在地</option>
+            <option value="">北京</option>
+            <option value="">珠海</option>
+        </select>
+        <select>
+            <option value="">食宿</option>
+            <option value="">包吃住</option>
+            <option value="">不包吃住</option>
+        </select>
+        <select>
+            <option value="">病人情况</option>
+            <option value="">良好</option>
+            <option value="">恶化</option>
+        </select>
+    </div>
+<div class="xiala">
+  <select name="select">
+    <option value="">所在地</option>
+    <option value="">北京</option>
+    <option value="">珠海</option>
+  </select>
+  <select name="select">
+    <option value="">食宿</option>
+    <option value="">包吃住</option>
+    <option value="">不包吃住</option>
+  </select>
+  <select name="select">
+    <option value="">病人情况</option>
+    <option value="">良好</option>
+    <option value="">恶化</option>
+  </select>
 </div>
+<div >
+  <div class="a" >
+	<div><img src="img/task5-2_0000s_0001_calendar2-拷贝-5.png" width="18" height="18" alt=""/>
+		服务日期
+	</div>
+	<div>
+	<p class="p1">2015-7-5 至 2015-7-12</p>
+	<p class="p2">25元/小时</p>
+	</div>
+	<div><img src="img/task5-2_0028_Shape-4-拷贝-4.png" width="16.15" height="19.55" alt=""/>
+		北京&middot;通州&middot;果园
+	</div>
+	<span></span>
+  </div>
+<div class="a" >
+	<div><img src="img/task5-2_0000s_0001_calendar2-拷贝-5.png" width="18" height="18" alt=""/>
+		服务日期
+	</div>
+	<div>
+	<p class="p1">2015-7-5 至 2015-7-12</p>
+	<p class="p2">35元/小时</p>
+	</div>
+	<div><img src="img/task5-2_0028_Shape-4-拷贝-4.png" width="16.15" height="19.55" alt=""/>
+		北京&middot;通州&middot;果园
+	</div>
+	<span></span>
+  </div>
+<div class="a" >
+	<div><img src="img/task5-2_0000s_0001_calendar2-拷贝-5.png" width="18" height="18" alt=""/>
+		服务日期
+	</div>
+	<div>
+	<p class="p1">2015-7-5 至 2015-7-12</p>
+	<p class="p2">45元/小时</p>
+	</div>
+	<div><img src="img/task5-2_0028_Shape-4-拷贝-4.png" width="16.15" height="19.55" alt=""/>
+		北京&middot;通州&middot;果园
+	</div>
+	<span></span>
+  </div>
+<div class="a" >
+	<div><img src="img/task5-2_0000s_0001_calendar2-拷贝-5.png" width="18" height="18" alt=""/>
+		服务日期
+	</div>
+	<div>
+	<p class="p1">2015-7-5 至 2015-7-12</p>
+	<p class="p2">45元/小时</p>
+	</div>
+	<div><img src="img/task5-2_0028_Shape-4-拷贝-4.png" width="16.15" height="19.55" alt=""/>
+		北京&middot;通州&middot;果园
+	</div>
+	<span></span>
+  </div>
+<div class="a" >
+	<div><img src="img/task5-2_0000s_0001_calendar2-拷贝-5.png" width="18" height="18" alt=""/>
+		服务日期
+	</div>
+	<div>
+	<p class="p1">2015-7-5 至 2015-7-12</p>
+	<p class="p2">45元/小时</p>
+	</div>
+	<div><img src="img/task5-2_0028_Shape-4-拷贝-4.png" width="16.15" height="19.55" alt=""/>
+		北京&middot;通州&middot;果园
+	</div>
+	<span></span>
+  </div>
+<div class="a" >
+	<div><img src="img/task5-2_0000s_0001_calendar2-拷贝-5.png" width="18" height="18" alt=""/>
+		服务日期
+	</div>
+	<div>
+	<p class="p1">2015-7-5 至 2015-7-12</p>
+	<p class="p2">25元/小时</p>
+	</div>
+	<div><img src="img/task5-2_0028_Shape-4-拷贝-4.png" width="16.15" height="19.55" alt=""/>
+		北京&middot;通州&middot;果园
+	</div>
+	<span></span>
+  </div>
+	
+	
+	
+	
+	
 </div>
+<div>
+<div style="height:4em;"></div>
+<section class='footer'>
+<img src="img/task5-2_0002s_0000_形状-4.png" width="30" height="25.5" alt=""/>
+<img src="img/task6-_000.png" width="53" height="53" alt=""/>
+<img src="img/task5-2_0002s_0004_买卖牛人.png" width="24" height="25.5" alt=""/>
+
+
+</section>
+
+</div>
+
 </body>
 </html>
