--- a/task61.html
+++ b/task61.html
@@ -38,24 +38,7 @@
             <option value="">恶化</option>
         </select>
     </div>
-<div class="xiala">
-  <select name="select">
-    <option value="">所在地</option>
-    <option value="">北京</option>
-    <option value="">珠海</option>
-  </select>
-  <select name="select">
-    <option value="">食宿</option>
-    <option value="">包吃住</option>
-    <option value="">不包吃住</option>
-  </select>
-  <select name="select">
-    <option value="">病人情况</option>
-    <option value="">良好</option>
-    <option value="">恶化</option>
-  </select>
-</div>
-<div >
+<main  >
   <div class="a" >
 	<div><img src="img/task5-2_0000s_0001_calendar2-拷贝-5.png" width="18" height="18" alt=""/>
 		服务日期
@@ -112,7 +95,7 @@
 	<div><img src="img/task5-2_0000s_0001_calendar2-拷贝-5.png" width="18" height="18" alt=""/>
 		服务日期
 	</div>
-	<div>
+	<div class="p">
 	<p class="p1">2015-7-5 至 2015-7-12</p>
 	<p class="p2">45元/小时</p>
 	</div>
@@ -127,30 +110,25 @@
 	</div>
 	<div>
 	<p class="p1">2015-7-5 至 2015-7-12</p>
-	<p class="p2">25元/小时</p>
+	<p class="p2">45元/小时</p>
 	</div>
 	<div><img src="img/task5-2_0028_Shape-4-拷贝-4.png" width="16.15" height="19.55" alt=""/>
 		北京&middot;通州&middot;果园
 	</div>
 	<span></span>
   </div>
-	
-	
-	
-	
-	
-</div>
-<div>
-<div style="height:4em;"></div>
-<section class='footer'>
+<div class="div3"></div>	
+</main>
+
+<div class="footer">
 <img src="img/task5-2_0002s_0000_形状-4.png" width="30" height="25.5" alt=""/>
 <img src="img/task6-_000.png" width="53" height="53" alt=""/>
 <img src="img/task5-2_0002s_0004_买卖牛人.png" width="24" height="25.5" alt=""/>
 
 
-</section>
-
 </div>
+
+
 
 </body>
 </html>
