--- a/task7/task7投票.html
+++ b/task7/task7投票.html
@@ -44,75 +44,95 @@
 <main>
   <p class="p1">
 	点击得票数最多人的头像</p>
-  <button type="button">
-    <div class="box" >
-	<p class="box2">1号</p>
-	<p class="box1">水民</p>
-		
-	</div>
-	 <div class="button-img">
+  <div class="father">
+    <button type="button">
+      <div class="box" >
+        <p class="box2">1号</p>
+        <p class="box1">水民</p>	
+      </div>
+      </button>
+	  	 <div class="button-img">
       <img src="img/images/2_03.png" width="15" height="15" alt=""/> 
 	  <img src="img/images/2_05.png" width="15" height="15" alt=""/>
       <img src="img/images/2_07.png" width="15" height="15" alt=""/> 
 	  <img src="img/images/2_09.png" width="15" height="15" alt=""/></div>
+  </div>
+  <div class="father">
+    <button type="button">
+      <div class="box" >
+        <p class="box2">1号</p>
+        <p class="box1">水民</p>
+      </div>
     </button>
-  <button type="button">
-    <div class="box" >
-      <p class="box2">2号</p>
-      <p class="box1">水民</p>
-    </div>
     <div class="button-img"> <img src="img/images/2_03.png" width="15" height="15" alt=""/> <img src="img/images/2_05.png" width="15" height="15" alt=""/> <img src="img/images/2_07.png" width="15" height="15" alt=""/> <img src="img/images/2_09.png" width="15" height="15" alt=""/></div>
-  </button>
-  <button type="button">
-    <div class="box" >
-      <p class="box2">3号</p>
-      <p class="box1">警察</p>
-    </div>
+  </div>
+  <div class="father">
+    <button type="button">
+      <div class="box" >
+        <p class="box2">1号</p>
+        <p class="box1">水民</p>
+      </div>
+    </button>
     <div class="button-img"> <img src="img/images/2_03.png" width="15" height="15" alt=""/> <img src="img/images/2_05.png" width="15" height="15" alt=""/> <img src="img/images/2_07.png" width="15" height="15" alt=""/> <img src="img/images/2_09.png" width="15" height="15" alt=""/></div>
-  </button>
-  <button type="button">
-    <div class="box" >
-      <p class="box2">4号</p>
-      <p class="box1">法官</p>
-    </div>
+  </div>
+  
+  <div class="father">
+    <button type="button">
+      <div class="box" >
+        <p class="box2">1号</p>
+        <p class="box1">水民</p>
+      </div>
+    </button>
     <div class="button-img"> <img src="img/images/2_03.png" width="15" height="15" alt=""/> <img src="img/images/2_05.png" width="15" height="15" alt=""/> <img src="img/images/2_07.png" width="15" height="15" alt=""/> <img src="img/images/2_09.png" width="15" height="15" alt=""/></div>
-  </button>
-  <button type="button">
-    <div class="box" >
-      <p class="box2">5号</p>
-      <p class="box1">狙击手</p>
-    </div>
+  </div>
+  <div class="father">
+    <button type="button">
+      <div class="box" >
+        <p class="box2">1号</p>
+        <p class="box1">水民</p>
+      </div>
+    </button>
     <div class="button-img"> <img src="img/images/2_03.png" width="15" height="15" alt=""/> <img src="img/images/2_05.png" width="15" height="15" alt=""/> <img src="img/images/2_07.png" width="15" height="15" alt=""/> <img src="img/images/2_09.png" width="15" height="15" alt=""/></div>
-  </button>
-  <button type="button">
-    <div class="box" >
-      <p class="box2">6号</p>
-      <p class="box1">医生</p>
-    </div>
+  </div>
+  <div class="father">
+    <button type="button">
+      <div class="box" >
+        <p class="box2">1号</p>
+        <p class="box1">水民</p>
+      </div>
+    </button>
     <div class="button-img"> <img src="img/images/2_03.png" width="15" height="15" alt=""/> <img src="img/images/2_05.png" width="15" height="15" alt=""/> <img src="img/images/2_07.png" width="15" height="15" alt=""/> <img src="img/images/2_09.png" width="15" height="15" alt=""/></div>
-  </button>
-  <button type="button">
-    <div class="box" >
-      <p class="box2">7号</p>
-      <p class="box1">杀手</p>
-    </div>
+  </div>
+  
+  <div class="father">
+    <button type="button">
+      <div class="box" >
+        <p class="box2">1号</p>
+        <p class="box1">水民</p>
+      </div>
+    </button>
     <div class="button-img"> <img src="img/images/2_03.png" width="15" height="15" alt=""/> <img src="img/images/2_05.png" width="15" height="15" alt=""/> <img src="img/images/2_07.png" width="15" height="15" alt=""/> <img src="img/images/2_09.png" width="15" height="15" alt=""/></div>
-  </button>
-  <button type="button">
-    <div class="box" >
-      <p class="box2">8号</p>
-      <p class="box1">水民</p>
-    </div>
+  </div>
+  <div class="father">
+    <button type="button">
+      <div class="box" >
+        <p class="box2">1号</p>
+        <p class="box1">水民</p>
+      </div>
+    </button>
     <div class="button-img"> <img src="img/images/2_03.png" width="15" height="15" alt=""/> <img src="img/images/2_05.png" width="15" height="15" alt=""/> <img src="img/images/2_07.png" width="15" height="15" alt=""/> <img src="img/images/2_09.png" width="15" height="15" alt=""/></div>
-  </button>
-  <button type="button">
-    <div class="box" >
-      <p class="box2">9号</p>
-      <p class="box1">水民</p>
-    </div>
+  </div>
+  <div class="father">
+    <button type="button">
+      <div class="box" >
+        <p class="box2">1号</p>
+        <p class="box1">水民</p>
+      </div>
+    </button>
     <div class="button-img"> <img src="img/images/2_03.png" width="15" height="15" alt=""/> <img src="img/images/2_05.png" width="15" height="15" alt=""/> <img src="img/images/2_07.png" width="15" height="15" alt=""/> <img src="img/images/2_09.png" width="15" height="15" alt=""/></div>
-  </button>
-	<div class="div3"></div>
+  </div>
+    
+<div class="div3"></div>
 </main>	
 	
 <div>
