--- a/task7/task7结果.html
+++ b/task7/task7结果.html
@@ -19,50 +19,58 @@
     <img src="img/Shape 120.png" width="30" height="30" alt=""/></div>
 </header>
 <div class="main">	
-<div>
-	<img src="img/图层 1.png" alt="" width="40" height="40" class="img1"/> 
-	<img src="img/图层 2.png" alt="" width="180" height="120" class="img2"/></div>
-
+  <div>
+    <img src="img/图层 1.png" alt="" width="40" height="40" class="img1"/> 
+    <img src="img/图层 2.png" alt="" width="180" height="120" class="img2"/></div>
+    
   <p class="p1">
     卧底胜利</p>
   <div class="p2">
     <p>太棒了!你知道么？在捉鬼游戏中只有20%的卧底取得游戏最终的胜利哦！
-	</p>
-	  
-	</div>
-	<div class="box2">
-  <p>本次游戏共计用时0小时25分钟</p>
-  <div class="p3">
-    <p>杀手0人</p>
-    <p>警察1人</p>
-    <p>平民6人</p>
-    <p>狙击手0人</p>
-    <p>医生1人</p>
+    </p>
+      
+    </div>
+  <div class="box2">
+    <p>本次游戏共计用时0小时25分钟</p>
+    <div class="p3">
+      <p>杀手0人</p>
+      <p>警察1人</p>
+      <p>平民6人</p>
+      <p>狙击手0人</p>
+      <p>医生1人</p>
+    </div>
+    <p>卧底词汇：爱新觉罗</p>
+    <p>水民词汇：努尔哈赤</p>
   </div>
-  <p>卧底词汇：爱新觉罗</p>
-  <p>水民词汇：努尔哈赤</p>
-</div>
   <div class="div3"></div>
-</div>	
-<div class="box">
-<p class="p4">第1天</p>
-<p class="p5">0小时07分</p>
-<p class="p6">晚上：5号被杀手杀死，5号是水民	</p>
-<p class="p7">白天：8号被全民投票投死，8号是杀手</p>
-	</div>
-<div class="box">
-  <p class="p4">第2天</p>
-  <p class="p5">0小时07分</p>
-  <p class="p6">晚上：5号被杀手杀死，5号是水民 </p>
-  <p class="p7">白天：8号被全民投票投死，8号是杀手</p>
 </div>
-  <footer class="footer" >
+<div>
+  <div class="box">
+    <p class="p4">第1天</p>
+    <p class="p5">0小时07分</p>
+    <p class="p6">晚上：5号被杀手杀死，5号是水民	</p>
+    <p class="p7">白天：8号被全民投票投死，8号是杀手</p>
+  </div>
+  <div class="box">
+    <p class="p4">第2天</p>
+    <p class="p5">0小时07分</p>
+    <p class="p6">晚上：5号被杀手杀死，5号是水民 </p>
+    <p class="p7">白天：8号被全民投票投死，8号是杀手</p> 
+  </div>
+	  <div class="div3">
+	</div>
+
+</div>
+
+<div class="footer">
+  <footer  >
     <button type="button" class="button1">
     再来一局
     </button>
     <button type="button" class="button2">
     上传并分享
     </button>
-  </footer>
+    </footer>
+</div>
 </body>
 </html>
