--- a/task7/task7投票.html
+++ b/task7/task7投票.html
@@ -41,98 +41,84 @@
             </script>
 <img src="img/多边形 12.png" width="13" height="11" alt=""/>
 </div>
-<main>
+<main class="main">
   <p class="p1">
 	点击得票数最多人的头像</p>
-  <div class="father">
+  <div>
     <button type="button">
       <div class="box" >
         <p class="box2">1号</p>
-        <p class="box1">水民</p>	
+        <p class="box1">水民</p>
+        
       </div>
+      <div class="button-img">
+        <img src="img/images/2_03.png" width="15" height="15" alt=""/> 
+        <img src="img/images/2_05.png" width="15" height="15" alt=""/>
+        <img src="img/images/2_07.png" width="15" height="15" alt=""/> 
+        <img src="img/images/2_09.png" width="15" height="15" alt=""/></div>
       </button>
-	  	 <div class="button-img">
-      <img src="img/images/2_03.png" width="15" height="15" alt=""/> 
-	  <img src="img/images/2_05.png" width="15" height="15" alt=""/>
-      <img src="img/images/2_07.png" width="15" height="15" alt=""/> 
-	  <img src="img/images/2_09.png" width="15" height="15" alt=""/></div>
-  </div>
-  <div class="father">
     <button type="button">
       <div class="box" >
-        <p class="box2">1号</p>
+        <p class="box2">2号</p>
         <p class="box1">水民</p>
       </div>
+      <div class="button-img"> <img src="img/images/2_03.png" width="15" height="15" alt=""/> <img src="img/images/2_05.png" width="15" height="15" alt=""/> <img src="img/images/2_07.png" width="15" height="15" alt=""/> <img src="img/images/2_09.png" width="15" height="15" alt=""/></div>
     </button>
-    <div class="button-img"> <img src="img/images/2_03.png" width="15" height="15" alt=""/> <img src="img/images/2_05.png" width="15" height="15" alt=""/> <img src="img/images/2_07.png" width="15" height="15" alt=""/> <img src="img/images/2_09.png" width="15" height="15" alt=""/></div>
-  </div>
-  <div class="father">
     <button type="button">
       <div class="box" >
-        <p class="box2">1号</p>
-        <p class="box1">水民</p>
+        <p class="box2">3号</p>
+        <p class="box1">警察</p>
       </div>
+      <div class="button-img"> <img src="img/images/2_03.png" width="15" height="15" alt=""/> <img src="img/images/2_05.png" width="15" height="15" alt=""/> <img src="img/images/2_07.png" width="15" height="15" alt=""/> <img src="img/images/2_09.png" width="15" height="15" alt=""/></div>
     </button>
-    <div class="button-img"> <img src="img/images/2_03.png" width="15" height="15" alt=""/> <img src="img/images/2_05.png" width="15" height="15" alt=""/> <img src="img/images/2_07.png" width="15" height="15" alt=""/> <img src="img/images/2_09.png" width="15" height="15" alt=""/></div>
   </div>
-  
-  <div class="father">
+  <div>
     <button type="button">
       <div class="box" >
-        <p class="box2">1号</p>
-        <p class="box1">水民</p>
+        <p class="box2">4号</p>
+        <p class="box1">法官</p>
       </div>
+      <div class="button-img"> <img src="img/images/2_03.png" width="15" height="15" alt=""/> <img src="img/images/2_05.png" width="15" height="15" alt=""/> <img src="img/images/2_07.png" width="15" height="15" alt=""/> <img src="img/images/2_09.png" width="15" height="15" alt=""/></div>
     </button>
-    <div class="button-img"> <img src="img/images/2_03.png" width="15" height="15" alt=""/> <img src="img/images/2_05.png" width="15" height="15" alt=""/> <img src="img/images/2_07.png" width="15" height="15" alt=""/> <img src="img/images/2_09.png" width="15" height="15" alt=""/></div>
-  </div>
-  <div class="father">
     <button type="button">
       <div class="box" >
-        <p class="box2">1号</p>
-        <p class="box1">水民</p>
+        <p class="box2">5号</p>
+        <p class="box1">狙击手</p>
       </div>
+      <div class="button-img"> <img src="img/images/2_03.png" width="15" height="15" alt=""/> <img src="img/images/2_05.png" width="15" height="15" alt=""/> <img src="img/images/2_07.png" width="15" height="15" alt=""/> <img src="img/images/2_09.png" width="15" height="15" alt=""/></div>
     </button>
-    <div class="button-img"> <img src="img/images/2_03.png" width="15" height="15" alt=""/> <img src="img/images/2_05.png" width="15" height="15" alt=""/> <img src="img/images/2_07.png" width="15" height="15" alt=""/> <img src="img/images/2_09.png" width="15" height="15" alt=""/></div>
-  </div>
-  <div class="father">
     <button type="button">
       <div class="box" >
-        <p class="box2">1号</p>
-        <p class="box1">水民</p>
+        <p class="box2">6号</p>
+        <p class="box1">医生</p>
       </div>
+      <div class="button-img"> <img src="img/images/2_03.png" width="15" height="15" alt=""/> <img src="img/images/2_05.png" width="15" height="15" alt=""/> <img src="img/images/2_07.png" width="15" height="15" alt=""/> <img src="img/images/2_09.png" width="15" height="15" alt=""/></div>
     </button>
-    <div class="button-img"> <img src="img/images/2_03.png" width="15" height="15" alt=""/> <img src="img/images/2_05.png" width="15" height="15" alt=""/> <img src="img/images/2_07.png" width="15" height="15" alt=""/> <img src="img/images/2_09.png" width="15" height="15" alt=""/></div>
   </div>
-  
-  <div class="father">
+  <div>
     <button type="button">
       <div class="box" >
-        <p class="box2">1号</p>
-        <p class="box1">水民</p>
+        <p class="box2">7号</p>
+        <p class="box1">杀手</p>
       </div>
+      <div class="button-img"> <img src="img/images/2_03.png" width="15" height="15" alt=""/> <img src="img/images/2_05.png" width="15" height="15" alt=""/> <img src="img/images/2_07.png" width="15" height="15" alt=""/> <img src="img/images/2_09.png" width="15" height="15" alt=""/></div>
     </button>
-    <div class="button-img"> <img src="img/images/2_03.png" width="15" height="15" alt=""/> <img src="img/images/2_05.png" width="15" height="15" alt=""/> <img src="img/images/2_07.png" width="15" height="15" alt=""/> <img src="img/images/2_09.png" width="15" height="15" alt=""/></div>
-  </div>
-  <div class="father">
     <button type="button">
       <div class="box" >
-        <p class="box2">1号</p>
+        <p class="box2">8号</p>
         <p class="box1">水民</p>
       </div>
+      <div class="button-img"> <img src="img/images/2_03.png" width="15" height="15" alt=""/> <img src="img/images/2_05.png" width="15" height="15" alt=""/> <img src="img/images/2_07.png" width="15" height="15" alt=""/> <img src="img/images/2_09.png" width="15" height="15" alt=""/></div>
     </button>
-    <div class="button-img"> <img src="img/images/2_03.png" width="15" height="15" alt=""/> <img src="img/images/2_05.png" width="15" height="15" alt=""/> <img src="img/images/2_07.png" width="15" height="15" alt=""/> <img src="img/images/2_09.png" width="15" height="15" alt=""/></div>
-  </div>
-  <div class="father">
     <button type="button">
       <div class="box" >
-        <p class="box2">1号</p>
+        <p class="box2">9号</p>
         <p class="box1">水民</p>
       </div>
+      <div class="button-img"> <img src="img/images/2_03.png" width="15" height="15" alt=""/> <img src="img/images/2_05.png" width="15" height="15" alt=""/> <img src="img/images/2_07.png" width="15" height="15" alt=""/> <img src="img/images/2_09.png" width="15" height="15" alt=""/></div>
     </button>
-    <div class="button-img"> <img src="img/images/2_03.png" width="15" height="15" alt=""/> <img src="img/images/2_05.png" width="15" height="15" alt=""/> <img src="img/images/2_07.png" width="15" height="15" alt=""/> <img src="img/images/2_09.png" width="15" height="15" alt=""/></div>
   </div>
-    
-<div class="div3"></div>
+	<div class="div3"></div>
 </main>	
 	
 <div>
